# GameEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GameEngine.sln  GenerateProjects.bat  README.md  premake5.lua
GameEngine/: CMakeLists.txt  GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine-Editor/: CMakeLists.txt
GameEngine-Editor/assets/scenes/: Example.gameengine  Example3D.gameengine  PinkCube.gameengine
GameEngine-Editor/assets/shaders/: Texture.glsl
GameEngine-Editor/src/: EditorLayer.cpp  EditorLayer.h  GameEngineEditorApp.cpp
GameEngine-Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
GameEngine/src/: GameEngine.h  Test.cpp  gepch.h
GameEngine/src/GameEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
GameEngine/src/GameEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  Window.cpp  Window.h
GameEngine/src/GameEngine/Debug/: Instrumentor.h
GameEngine/src/GameEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
GameEngine/src/GameEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
GameEngine/src/GameEngine/Math/: Math.h
GameEngine/src/GameEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
GameEngine/src/GameEngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
GameEngine/src/GameEngine/Utils/: PlatformUtils.h
GameEngine/src/Platform/Linux/: LinuxInput.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
GameEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
GameEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  GameEngineProfile-Runtime.json  GameEngineProfile-Shutdown.json  GameEngineProfile-Startup.json  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: FastTexture.glsl  Texture.glsl
Sandbox/src/: Application.cpp  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
bin-int/Debug-x64/GameEngine/: GameEngine.dll.recipe  vc143.idb
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc143.idb
cmake/: Functions.cmake
scripts/: Linux-GenProjects.sh  Win-GenProjects.bat
